--- a/WebContent/view/Home.view.xml
+++ b/WebContent/view/Home.view.xml
@@ -46,7 +46,7 @@
 				noDataText="{i18n>HOME_NO_DATA}"
 				items="{
 					path : '/Member',
-					parameters : {select:'ID,FirstName,LastName,PictureUrl,Phone,MemberTeam'}
+					parameters : {select:'ID,FirstName,LastName,PictureUrl,MemberTeam'}
 				}">
 				<items>
 					<ObjectListItem
