Small update for UI on mobile
Too many buttons were visible on a phone.
Limit visibility for now.

--- a/WebContent/view/Member.view.xml
+++ b/WebContent/view/Member.view.xml
@@ -14,7 +14,7 @@
             ]
 		}"
 		showNavButton="{device>/isPhone}"
-		navButtonPress="handleNavButtonPress" >
+		navButtonPress="handleNavButtonPress">
 		<footer>
 			<Bar>
 				<contentLeft>
@@ -35,10 +35,12 @@
           			<Button 
             			text="Update"
             			type="Emphasized"
+            			visible="{device>/isNoPhone}"
             			press="onUpdate" />
           			<Button
             			text="Delete"
             			type="Reject"
+            			visible="{device>/isNoPhone}"            			
             			press="onDelete" />
         		</contentRight>
 			</Bar>
