--- a/WebContent/view/Team.view.xml
+++ b/WebContent/view/Team.view.xml
@@ -7,35 +7,34 @@
 	<Page
 		id="page"
 		showNavButton="true"
-		navButtonPress="handleNavButtonPress"
-		showFooter="{device>/isNoPhone}" >
+		navButtonPress="handleNavButtonPress">
 		<footer>
-		<Bar>
-        <contentLeft>
-          <Select
-            id="groupSelect"
-            change="onGroup"
-            icon="sap-icon://group-2"
-            type="IconOnly"
-            selectedKey="None"
-            autoAdjustWidth="true" >
-            <core:Item 
-                   key="None"
-                   text="{i18n>NONE}" />
-            <core:Item 
-                   key="LastName"
-                   text="{i18n>LASTNAME}" />
-          </Select>
-        </contentLeft>
-        <contentRight>
-          <Button
-            icon="sap-icon://add"
-            press="onAddUser" />
-          <Button
-            icon="sap-icon://add-contact"
-            press="onAddUserFloat" />
-        </contentRight>
-      	</Bar>
+			<Bar>
+        		<contentLeft>
+          			<Select
+            			id="groupSelect"
+            			change="onGroup"
+            			icon="sap-icon://group-2"
+            			type="IconOnly"
+            			selectedKey="None"
+            			autoAdjustWidth="true" >
+            			<core:Item 
+                   			key="None"
+                   			text="{i18n>NONE}" />
+            			<core:Item 
+                   			key="LastName"
+                   			text="{i18n>LASTNAME}" />
+          			</Select>
+        		</contentLeft>
+        		<contentRight>
+          			<Button
+            			icon="sap-icon://add"
+            			press="onAddUser" />
+          			<Button
+            			icon="sap-icon://add-contact"
+            			press="onAddUserFloat" />
+        		</contentRight>
+      		</Bar>
 		</footer>
 		<content>
 			<List
