Added remark feature and error handler

--- a/WebContent/view/App.view.xml
+++ b/WebContent/view/App.view.xml
@@ -1,3 +1,7 @@
-<View xmlns="sap.m" displayBlock="true">
-	<SplitApp id="splitApp"/>
+<View
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns="sap.m"
+	displayBlock="true">
+	<SplitApp
+		id="splitApp"/>
 </View>
