Major update of mORmot RestModel
Model now works better with the mORMot , thanks to metadata.
Less hacks needed.
One hack added: upload of blobs: the standard OData makes a string from
the binary data ... ;-(

--- a/WebContent/view/Home.view.xml
+++ b/WebContent/view/Home.view.xml
@@ -10,7 +10,7 @@
 			<Toolbar id="searchBar">
 				<SearchField
 					id="searchField"
-					showRefreshButton="{device>/isNoTouch}"
+					showRefreshButton="true"
 					placeholder="{i18n>HOME_SEARCH_PLACEHOLDER}"
 					search="handleSearch"
 					tooltip="{i18n>HOME_SEARCH_TOOLTIP}"
